octsympy 2.6.1-dev
==================

  * `subs` allows multiple scalar variables to be replaced with symbolic
    matrix expressions.

  * symfun can be evaluated at symbolic matrices: `f(sym([1 2; 3 4]))`
    now works where `f(x)` is a symfun.

  * New command `sympref diagnose` to help debug Python/SymPy issues.

  * Various bug fixes and documentation updates.



octsympy 2.6.0 (2017-07-27)
===========================

  * New symbolic commands:

          ellipke         ellipticE       harmonic
          ellipticCE      ellipticF       kroneckerDelta
          ellipticCK      ellipticK       pochhammer
          ellipticCPi     ellipticPi

  * New `@double` numerical functions; these are wrappers around SymPy,
    so they are slower than native floating-point implementations.

          harmonic

  * Support for the new SymPy 1.1.1.

  * `solve` now supports vectors of equations and vectors of variables.

  * Better warning for `sym(0.1)`, updated docs about floating point.

  * Double values can now be converted to their exact rational value
    using `sym(0.1, 'f')`.  Passing `'r'` gives the current heuristic
    behaviour.  Neither raises a warning.

  * The default floating-point heuristics now check for square roots of
    integers, so `sym(sqrt(2))` should work.

  * `sym('i')` and `sym('I')` no longer create the imaginary unit: use
    `sym(i)` or `sym(1i)`.

  * `sym(e)` now gives the same as `exp(sym(1))`.  However, `sym('e')`
    and `syms e` continue to create a variable named `e`.

  * `sym` now accepts function handles such as anonymous functions as
    inputs.

  * `subs` is not approriate for numerical evaluation; add an example in
    `help subs` which shows how to do this with `function_handle`.

  * Calling `sym(cell)` now creates a sym array instead of a cell array.
    Old behaviour of creating a cell array was deprecated in 2.5.0.

  * Bug fix: isequal(n) for symfun's correctly tests the argnames.



octsympy 2.5.0 (2017-02-01)