@@ -1,6 +1,15 @@
 octsympy 2.6.1-dev
 ==================
 
+  * New symbolic commands:
+
+          euler
+
+  * New `@double` numerical functions; these are wrappers around SymPy,
+    so they are slower than native floating-point implementations.
+
+          euler
+
   * `subs` allows multiple scalar variables to be replaced with symbolic
     matrix expressions.
 
